# RAG

./: .gitignore  README.md  pyproject.toml  sync.sh
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/BotMessage/: BotMessage.module.css  index.tsx
frontend/src/components/CustomHeader/: CustomHeader.module.css  index.tsx
frontend/src/components/DemoSearch/: DemoSearch.module.css  index.tsx
frontend/src/components/InputSearch/: Index.tsx  InputSearch.module.css
frontend/src/components/MainSection/: Main.module.css  index.tsx
frontend/src/components/UserMessage/: UserMessage.module.css  index.tsx
frontend/src/hooks/: useGetSearchResult.ts
frontend/src/pages/Home/: Home.module.css  index.tsx
rag/: config.py  querier.py  service.py
rag/index/: ingest.py  markdown.py  markdown_to_json.py
tools/: download_and_index.sh  index_docs.sh  launch.sh
