[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["kartik-gupta-ij <kartikgupta7267@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
qdrant-client = {extras = ["fastembed"], version = "^1.6.3"}
python-dotenv = "^1.0.0"
openai = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
